--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.9",
     "aws-amplify": "^6.2.0",
-    "next": "13.5.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "eslint-config-next": "^14.2.3",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.0.0",
@@ -21,6 +22,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.3.2"
   }
 }
