--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.9",
+    "@nextui-org/tooltip": "^2.0.33",
     "aws-amplify": "^6.2.0",
     "eslint-config-next": "^14.2.3",
     "next": "^14.2.3",
