--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/tooltip": "^2.0.33",
     "aws-amplify": "^6.3.0",
     "eslint-config-next": "^14.2.3",
+    "framer-motion": "^11.2.4",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
