--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.9",
     "@nextui-org/tooltip": "^2.0.33",
+    "@reduxjs/toolkit": "^2.2.5",
     "aws-amplify": "^6.3.0",
     "eslint-config-next": "^14.2.3",
     "framer-motion": "^11.2.4",
@@ -21,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
