--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.9",
+    "@dicebear/collection": "^8.0.1",
+    "@dicebear/core": "^8.0.1",
     "@nextui-org/tooltip": "^2.0.33",
     "@reduxjs/toolkit": "^2.2.5",
     "aws-amplify": "^6.3.0",
