--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-amplify/ui-react": "^6.1.9",
     "@dicebear/collection": "^8.0.1",
     "@dicebear/core": "^8.0.1",
+    "@nextui-org/theme": "^2.2.4",
     "@nextui-org/tooltip": "^2.0.33",
     "@reduxjs/toolkit": "^2.2.5",
     "aws-amplify": "^6.3.0",
