Add chart js to display job statuses

--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@uploadcare/react-uploader": "^0.5.3",
     "aws-amplify": "^6.3.0",
     "aws-cdk-lib": "^2.143.1",
+    "chart.js": "^4.4.3",
     "constructs": "^10.3.0",
     "eslint": "^9.3.0",
     "eslint-config-next": "^14.2.3",
     "framer-motion": "^11.2.4",
     "next": "^14.2.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
